[package]
name = "existential"
version = "0.1.1"
authors = ["Frank Steffahn <fdsteffahn@gmail.com>"]
license = "MIT OR Apache-2.0"
description = """
Existential quantification over lifetimes
"""
repository = "https://github.com/steffahn/existential"
homepage = "https://github.com/steffahn/existential"
documentation = "https://docs.rs/existential"
keywords = ["dyn", "lifetime"]
categories = ["no-std", "rust-patterns"]
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
